# alphafold3-decoded

./: .gitignore  LICENSE  README.md  pyproject.toml
common/: modules.py  utils.py
config/: config.py
data/fold_inputs/: fold_input_debug.json
diffusion/: diffusion.py  model.py
evoformer/: evoformer.py
feature_extraction/: contact_features.py  feature_extraction.py  msa_features.py  ref_struct_features.py  token_features.py
input_embedding/: atom_attention.py  input_embedder.py
scripts/: download_pdb_datasets.sh  generate_test_results.py  prepare_tutorials.py  remap_weights.py  tensortrace.py  tests.py
solutions/: config.py  internal_tests.py
solutions/common/: block_sparse_tensor.py  modules.py  residue_constants.py  utils.py
solutions/converted_notebooks/: feature_extraction_notebook.py
solutions/diffusion/: diffusion.py  model.py
solutions/evoformer/: evoformer.py
solutions/feature_extraction/: bond_features.py  contact_features.py  feature_extraction.ipynb  feature_extraction.py  msa_features.py  ref_struct_features.py  reference_features.py  token_features.py
solutions/input_embedding/: atom_attention.py  input_embedder.py
training/: af3_dataset.py
tutorials/: config.py  tensortrace.py
tutorials/common/: utils.py
tutorials/converted_notebooks/: feature_extraction_notebook.py
tutorials/diffusion/: diffusion.py  model.py
tutorials/evoformer/: evoformer.py
tutorials/feature_extraction/: bond_features.py  contact_features.py  feature_extraction.ipynb  feature_extraction.py  msa_features.py  ref_struct_features.py  (+2 more)
(+4 files in other folders)
